@@ -1,3 +1,7 @@
+2010-06-22  Karl Berry  <karl@gnu.org>
+
+	* texi2html.pl: sectionning has one n in English.
+
 2010-06-21   Patrice Dumas  <pertusus@free.fr>
 
 	* formats/plaintext.init: when doing plaintext or info with 
